# tensor_product_polynomials

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: clang-format-check.yml  cmake.yml  make_doxygen.yml
doxygen/: CMakeLists.txt  Doxyfile
include/tpp/: compile_time_tricks.hxx  hypercube.hxx  tpp.hxx  tpp_assert.hxx
include/tpp/quadrature/: one_dimensional.hxx  quadrature.hxx  tensorial.hxx
include/tpp/shape_function/: one_dimensional.hxx  shape_function.hxx  shape_type.hxx  tensorial.hxx
tests/: CMakeLists.txt  one_dimensional.cxx
